# gotechnica_backend

./: .env.example  .gitignore  AGENTS.md  pyproject.toml  requirements.txt
docs/: cloudfare_r2_api.md  decisions.md  dify_api.md  dify_schemas.md  elevenlabs_api.md  gemini_api.md  pipeline.md  prd_init.md  tasks.md  tree.md
resource/: knowledge-card-renderer.html
src/: __init__.py  config.py  main.py
src/api/: __init__.py  cards.py  chat.py  images.py
src/clients/: dify_client.py  elevenlabs_client.py  gemini_client.py  r2_client.py
src/models/: request.py  response.py
src/nodes/: image_highlighten.py
src/services/: chat.py  pipeline.py  storage.py
src/utils/: errors.py  logger.py
tests/: test_chat_service.py  test_config.py  test_dify_client.py  test_elevenlabs_client.py  test_gemini_client.py  test_health.py  test_image_api.py  test_image_service.py  test_pipeline_service.py
